# lil-raft

./: CMakeLists.txt  readme.md
src/: raft.c  raft.h  raft_election.c  raft_errors.h  raft_internal.h  raft_log.c  raft_readindex.c  raft_replication.c  raft_snapshot.c  raft_types.h
tests/: test_core.c  test_election.c  test_log.c
